name:                h-fcp
version:             0.1.0.0
synopsis:            Implementation of the Freenet Client Protocol v2
description:         This is a Haskell library allowing to talk to Freenet nodes using the Freenet Client Protocol
                     (FCP), version 2. It contains the library itself, exporting the Network.FCP module, and some
                     command line utilities using the library.
license:             LGPL-3
license-file:        LICENSE
author:              Matthias Treydte
maintainer:          mt@waldheinz.de
-- copyright:
category:            Network
build-type:          Simple
cabal-version:       >=1.10

data-files: data/*.sql

library
  exposed-modules:     Network.FCP
  -- other-modules:
  -- other-extensions:
  build-depends:
    base        >= 4.8,
    bytestring  >= 0.10,
    containers  >= 0.5,
    network     >= 2.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable fn-stats
  hs-source-dirs:     munin
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -Wall
  build-depends:
    base        >= 4.8,
    containers  >= 0.5,
    h-fcp

executable hsite
  hs-source-dirs:    hsite
  main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:       -Wall
  build-depends:
    base          >= 4.8,
    ansi-terminal >= 0.6,
    bytestring    >= 0.10,
    directory     >= 1.2,
    filepath      >= 1.3,
    mime-types    >= 0.1,
    SHA           >= 1.6,
    sqlite-simple >= 0.4,
    text          >= 0.11,
    time          >= 1.4,
    unix          >= 2.6,
    h-fcp
  other-modules:
    CmdLine
    Database
    Insert
    Progress
    Utils

executable hspider
  hs-source-dirs: hspider
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base,
    bytestring,
    filepath,
    utf8-string,
    directory,
    h-fcp,
    tagsoup,
    unordered-containers
